[package]
name = "docify"
version = "0.1.0"
authors = ["fat <rebornhavei@outlook.com>"]
edition = "2018"

[dependencies]
#actix = { version="0.8.0-alpha.3", features=["http"] }
actix-web = { version="1.0.0-alpha.5", default-features = false }
actix-http = { version="0.1.0-alpha.5", default-features = false }
actix-rt = "0.2.2"
actix-server = "0.4.2"
#actix-service = "0.3.6"
#tokio-postgres = { git="https://github.com/fafhrd91/rust-postgres.git" }
diesel = { version = "1.2", features = ["postgres"] }
actix = { version="0.8.0", features=["http"] }
num_cpus="1.10.0"
futures = "0.1.25"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"